--- a/ksd.Rmd
+++ b/ksd.Rmd
@@ -34,7 +34,7 @@ knitr::opts_chunk$set(eval=F)
 
 # Abstract {#index}
 
-Formation of kidney stones resulting in urological disorders remains a major cause of morbidity in renal and cardiovascular diseases. Innate immunity (mainly NLRP3 inflammasome) has demonstrated a key role in the development of kidney stone disease ([KSD](https://www.nhs.uk/conditions/Kidney-stones/)) but a molecular rationale for new therapeutic intervention is lacking. We hypothesized that identifying inflammatory gene networks underlying risk of nephrolithiasis would inform therapeutic targets for rational drug selection. Using our recently developed genetics-led target prioritisation approach ([Pi](https://pubmed.ncbi.nlm.nih.gov/31253980)) and taking as inputs the most comprehensive summary statistics from nephrolithiasis genome-wide association studies (for example, [the most recent](https://pubmed.ncbi.nlm.nih.gov/31729369)), we generated a ranked list of >15,000 target genes (see [List of prioritised target genes]). The top ranked targets were highly enriched for genes involved in TRAF6- or TNFR1-induced NF-kappa B activation (see [List of prioritised pathways]), including BIRC2/3, IKBKB/G, NFKB1/2, NFKBIA/B, TRAF1/2/6, MYD88 and TNF. We further identified a network of highly ranked and interconnecting genes (see [Gene network]) that could be repurposed to reveal tractable points for intervention (see [Drug repurposing]). Network genes could be targeted by drugs already in clinical use (BCL2 targeted in chronic lymphocytic leukemia, SRC in chronic myelogenous leukemia and thyroid carcinoma, and TYK2 in rheumatoid arthritis). We found the highest degree of support from preclinical (phased) drug targets; these included genes (AKT1, MAPK14 and MMP9) targeted by drugs in clinical phase III, and the gene BIRC3 by a cIAP1/cIAP2 inhibitor in clinical phase II. Taken together, targets and drugs prioritised in this study provide the rich information of how to target innate immune pathways, with the potential of advancing therapeutic strategies for kidney stone disease. The data supporting the findings of this study are made available at https://23verse.github.io/fungi. Please email [us](mailto:fh12355@rjh.com.cn) for greater details.
+Formation of kidney stones resulting in urological disorders remains a major cause of morbidity in renal and cardiovascular diseases. Innate immunity (mainly NLRP3 inflammasome) has demonstrated a key role in the development of kidney stone disease ([KSD](https://www.nhs.uk/conditions/Kidney-stones/)) but a molecular rationale for new therapeutic intervention is lacking. We hypothesized that identifying inflammatory gene networks underlying risk of nephrolithiasis would inform therapeutic targets for rational drug selection. Using our recently developed genetics-led target prioritisation approach ([Pi](https://pubmed.ncbi.nlm.nih.gov/31253980)) and taking as inputs the most comprehensive summary statistics from nephrolithiasis genome-wide association studies (for example, [the most recent](https://pubmed.ncbi.nlm.nih.gov/31729369)), we generated a ranked list of >15,000 target genes (see [List of prioritised target genes]). The top ranked targets were highly enriched for genes involved in TRAF6- or TNFR1-induced NF-kappa B activation (see [List of prioritised pathways]), including BIRC2/3, IKBKB/G, NFKB1/2, NFKBIA/B, TRAF1/2/6, MYD88 and TNF. We further identified a network of highly ranked and interconnecting genes (see [Gene network]) that could be repurposed to reveal tractable points for intervention (see [Drug repurposing]). Network genes could be targeted by drugs already in clinical use (BCL2 targeted in chronic lymphocytic leukemia, SRC in chronic myelogenous leukemia and thyroid carcinoma, and TYK2 in rheumatoid arthritis). We found the highest degree of support from preclinical (phased) drug targets; these included genes (AKT1, MAPK14 and MMP9) targeted by drugs in clinical phase III, and the gene BIRC3 by a cIAP1/cIAP2 inhibitor in clinical phase II. Taken together, targets and drugs prioritised in this study provide the rich information of how to target innate immune pathways, with the potential of advancing therapeutic strategies for kidney stone disease. The data supporting the findings of this study are made available at https://23verse.github.io/ksd. Please email [us](mailto:fh12355@rjh.com.cn) for greater details.
 
 ```{r, eval=FALSE, echo=FALSE}
 cd ~/Sites/XGR/KSD/BOOKLET
@@ -75,7 +75,7 @@ git status | grep 'modified' | awk '{print $2}' | xargs git add
 git status | grep 'deleted' | awk '{print $2}' | xargs git rm
 find ./ -type f -name '*.html' -o -type f -name '*.png' -o -type f -name '*.css' -o -type f -name '*.js' -o -type f -name '*.ttf' -o -type f -name '*.Rmd' -o -type f -name '*.yml' -o -type f -name '*.RDS' -o -type f -name '*.r' | xargs git add
 git add --all
-git commit -m 'Update fungi'
+git commit -m 'Update ksd'
 git push origin main
 ##########################
 
@@ -115,7 +115,6 @@ git push origin main
 # visit https://github.com/23verse/ksd/settings -> GitHub Pages (main/root)
 # Alive (https://23verse.github.io/ksd): Genetic prioritisation for kidney stone disease
 ####################################################
-
 
 ```
 
