--- a/ksd.Rmd
+++ b/ksd.Rmd
@@ -1,12 +1,7 @@
 ---
 documentclass: book
 classoption: oneside
-title: "Genetic prioritisation, therapeutic repositioning and cross-disease comparisons implicate inflammatory targets tractable for kidney stone disease"
-author: |
- | National Research Centre for Translational Medicine, Ruijin Hospital, Shanghai Jiao Tong University School of Medicine
- | Bristol Renal Unit, Translational Health Sciences, University of Bristol, Bristol, UK
- | Department of Physiology Anatomy and Genetics, University of Oxford, Oxford, UK
-date: "`r Sys.Date()`"
+title: "Genetic prioritisation, therapeutic repositioning and cross-disease comparisons reveal inflammatory targets tractable for kidney stone disease"
 vignette: >
  %\VignetteIndexEntry{KSD Booklet}
  %\VignetteEngine{knitr::rmarkdown}
@@ -34,9 +29,28 @@ knitr::opts_chunk$set(eval=F)
 ```
 
 
-# Abstract {#index}
+# Overview {#index}
 
-Formation of kidney stones resulting in urological disorders remains a major cause of morbidity in renal and cardiovascular diseases. Innate immunity (mainly NLRP3 inflammasome) has demonstrated a key role in the development of kidney stone disease ([KSD](https://www.nhs.uk/conditions/Kidney-stones/)) but a molecular rationale for new therapeutic intervention is lacking. We hypothesized that identifying inflammatory gene networks underlying risk of nephrolithiasis would inform therapeutic targets for rational drug selection. Using our recently developed genetics-led target prioritisation approach ([Pi](https://pubmed.ncbi.nlm.nih.gov/31253980)) and taking as inputs the most comprehensive summary statistics from nephrolithiasis genome-wide association studies (for example, [the most recent](https://pubmed.ncbi.nlm.nih.gov/31729369)), we generated a ranked list of >15,000 target genes (see [List of prioritised target genes]). The top ranked targets were highly enriched for genes involved in TRAF6- or TNFR1-induced NF-kappa B activation (see [List of prioritised pathways]), including BIRC2/3, IKBKB/G, NFKB1/2, NFKBIA/B, TRAF1/2/6, MYD88 and TNF. We further identified a network of highly ranked and interconnecting genes (see [Gene network]) that could be repurposed to reveal tractable points for intervention (see [Drug repurposing]). Network genes could be targeted by drugs already in clinical use (BCL2 targeted in chronic lymphocytic leukemia, SRC in chronic myelogenous leukemia and thyroid carcinoma, and TYK2 in rheumatoid arthritis). We found the highest degree of support from preclinical (phased) drug targets; these included genes (AKT1, MAPK14 and MMP9) targeted by drugs in clinical phase III, and the gene BIRC3 by a cIAP1/cIAP2 inhibitor in clinical phase II. Taken together, targets and drugs prioritised in this study provide the rich information of how to target innate immune pathways, with the potential of advancing therapeutic strategies for kidney stone disease. The data supporting the findings of this study are made available at https://23verse.github.io/ksd. Please email [us](mailto:fh12355@rjh.com.cn) for greater details.
+## Contribution
+
+```{r logo, fig.cap="Logo designed for the project webpage here (https://23verse.github.io/kids).", fig.width=9.7, fig.height=6, echo=FALSE, eval=T, fig.align="center",out.width="30%"}
+library(png)
+library(grid)
+img <- readPNG("booklet.KSD.logo.png")
+grid.raster(img)
+```
+
+Inflammatory response plays a key role in kidney stone formation, and targeting innate immunity is an increasingly appreciated immunotherapeutic strategy in treating and preventing kidney stone disease. This study shows that identification of crosstalk between inflammatory pathways underlying disease risk can inform therapeutic targets for rational drug selection. To highlight this utility, we identify ulixertinib and losmapimod, two inhibitors of inflammatory mediators that are now under clinical investigation. An atlas of genetic targets, together with candidate drugs we reposition here, can be of translational use to manage kidney stones for years to come.
+
+
+## Abstract
+
+- **Background**: Formation of kidney stones resulting in urological disorders remains a major cause of morbidity in renal diseases and many others. Innate immunity, mainly inflammasome, has demonstrated a key role in the development of [kidney stone disease](https://www.nhs.uk/conditions/Kidney-stones/) (or `nephrolithiasis`) but a molecular rationale for therapeutic intervention targeting immunity is far from clear. We reason that identifying inflammatory gene networks underlying risk of nephrolithiasis would inform therapeutic targets for rational drug selection. 
+
+- **Results**: Using our recently established genetics-led target prioritisation approach ([Pi](https://pubmed.ncbi.nlm.nih.gov/31253980)) applied to summary data from genome-wide association studies in nephrolithiasis (for example, [the most recent](https://pubmed.ncbi.nlm.nih.gov/31729369)), we generated a ranked list of ~12,500 target genes (see [Genetic prioritisation]), with the top ranked targets highly enriched for genes involved in the NF-kB regulation, including interaction neighbors of inflammasome genes. We identified a network of highly ranked and interconnecting genes that are of functional relevance to nephrolithiasis, such as those involved in autophagy (MTOR and SQSTM1). The identified network forms a cohesive crosstalk between inflammatory pathways (see [Pathway crosstalk]) that can be utilised for therapeutic repositioning. Coupled with removal analysis, these crosstalk genes can be also useful for combinatorial drug selection, including identification of ulixertinib (targeting MAPK3) and losmapimod (targeting MAPK14) that are both under clinical investigation as inhibitors of inflammatory mediators. Finally, we performed cross-disease comparisons and druggable pocket predictions, identifying inflammatory targets that are specific to and tractable for nephrolithiasis (see [Cross-disease comparisons]). 
+
+- **Conclusion**: Taken together, genetic targets prioritised and candidate drugs repositioned in this study provide the rich information of how to target innate immune pathways, with the potential of advancing immunotherapeutic strategies for nephrolithiasis. The data supporting our findings are made publicly available at https://23verse.github.io/kids. Please email [us](mailto:fh12355@rjh.com.cn) for more information.
+
 
 ```{r, eval=FALSE, echo=FALSE}
 cd ~/Sites/XGR/KSD/BOOKLET
@@ -59,14 +73,14 @@ q('no')
 ####################################################
 
 ##########################
-https://23verse.github.io/ksd
+https://23verse.github.io/kids
 ##########################
 ## bookdown::render_book + bookdown::gitbook
-cd ~/Sites/SVN/github/ksd
+cd ~/Sites/SVN/github/kids
 # delete previous *.html *.png *.css *.js *.ttf *.Rmd files *.yml files
 find ./ -type f -name '*.html' -o -type f -name '*.png' -o -type f -name '*.css' -o -type f -name '*.js' -o -type f -name '*.ttf' -o -type f -name '*.Rmd' -o -type f -name '*.yml' -o -type f -name '*.RDS' -o -type f -name '*.r' | xargs rm -rf
 ############
-# copy the whole package from ~/Sites/XGR/KSD/BOOKLET/KSD2booklet to ~/Sites/SVN/github/ksd
+# copy the whole package from ~/Sites/XGR/KSD/BOOKLET/KSD2booklet to ~/Sites/SVN/github/kids
 cp -rf ~/Sites/XGR/KSD/BOOKLET/KSD2booklet/* ./
 # copy/rename ~/Sites/XGR/KSD/BOOKLET/now.KSD_booklet.Rmd to ~/Sites/SVN/github/ksd/ksd.Rmd
 cp -rf ~/Sites/XGR/KSD/BOOKLET/now.KSD_booklet.Rmd ./ksd.Rmd
@@ -77,7 +91,7 @@ git status | grep 'modified' | awk '{print $2}' | xargs git add
 git status | grep 'deleted' | awk '{print $2}' | xargs git rm
 find ./ -type f -name '*.html' -o -type f -name '*.png' -o -type f -name '*.css' -o -type f -name '*.js' -o -type f -name '*.ttf' -o -type f -name '*.Rmd' -o -type f -name '*.yml' -o -type f -name '*.RDS' -o -type f -name '*.r' | xargs git add
 git add --all
-git commit -m 'Update ksd'
+git commit -m 'Update kids'
 git push origin main
 ##########################
 
@@ -101,22 +115,26 @@ git commit -m 'Initial commit'
 git push origin master
 # Alive (https://23verse.github.io)
 
-> **A project `https://github.com/23verse/ksd`**
+> **A project `https://github.com/23verse/kids`**
 
-# visit https://github.com/new (enter "ksd" -> Initialize this repository with a README)
+# visit https://github.com/new (enter "kids" -> Initialize this repository with a README)
 ## https://github.com/23verse/ksd/settings/access: add "hfang-bristol"
 # clone into the local machine 
 cd ~/Sites/SVN/github
-git clone git@github.com:23verse/ksd.git
-cd ~/Sites/SVN/github/ksd
+git clone git@github.com:23verse/kids.git
+cd ~/Sites/SVN/github/kids
 git pull origin main
-echo "Hello ksd" > index.html
+echo "Hello kids" > index.html
 git add --all
 git commit -m 'Initial commit'
 git push origin main
-# visit https://github.com/23verse/ksd/settings -> GitHub Pages (main/root)
-# Alive (https://23verse.github.io/ksd): Genetic prioritisation for kidney stone disease
+# visit https://github.com/23verse/kids/settings -> GitHub Pages (main/root)
+# Alive (https://23verse.github.io/kids): Genetic target prioritisation in nephrolithiasis
 ####################################################
+
+ssh-keygen -t ed25519 -C "hfang.shanghai@gmail.com"
+cat ~/.ssh/id_ed25519.pub
+ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAINwDcBiy9B/F0Snz+CtHJ2u15nDyaL/WVyVC4GDU1t1h hfang.shanghai@gmail.com
 
 ```
 
@@ -127,68 +145,153 @@ RData.location <- "~/Sites/XGR/KSD/BOOKLET"
 
 ```{r, eval=F, echo=F}
 ## KSD_priority.txt.gz
-cp ~/Databases/grant_app/jobs/Oxford/Oxford_Wellcome_Trust_Centre_for_Human_Genetics/ULTRA-DD/FrontierImmunology/KidneyStone/KSD_priority.txt.gz ~/Sites/XGR/KSD/BOOKLET
+cp ~/Databases/grant_app/jobs/Oxford/Oxford_Wellcome_Trust_Centre_for_Human_Genetics/ULTRA-DD/FrontierImmunology/KidneyStone/outputs/KSD_priority.txt.gz ~/Sites/XGR/KSD/BOOKLET
 
-## KSD_reactome.txt
-cp ~/Databases/grant_app/jobs/Oxford/Oxford_Wellcome_Trust_Centre_for_Human_Genetics/ULTRA-DD/FrontierImmunology/KidneyStone/KSD_reactome.txt ~/Sites/XGR/KSD/BOOKLET
+## subg_nodes.txt
+cp ~/Databases/grant_app/jobs/Oxford/Oxford_Wellcome_Trust_Centre_for_Human_Genetics/ULTRA-DD/FrontierImmunology/KidneyStone/outputs/subg_nodes.txt ~/Sites/XGR/KSD/BOOKLET
 
-## KSD_subg_nodes.txt
-cp ~/Databases/grant_app/jobs/Oxford/Oxford_Wellcome_Trust_Centre_for_Human_Genetics/ULTRA-DD/FrontierImmunology/KidneyStone/KSD_subg_nodes.txt ~/Sites/XGR/KSD/BOOKLET
+## crossdisease_matrix.txt
+cp ~/Databases/grant_app/jobs/Oxford/Oxford_Wellcome_Trust_Centre_for_Human_Genetics/ULTRA-DD/FrontierImmunology/KidneyStone/outputs/crossdisease_matrix.txt ~/Sites/XGR/KSD/BOOKLET
+
+## crossdisease_suprahex.txt
+cp ~/Databases/grant_app/jobs/Oxford/Oxford_Wellcome_Trust_Centre_for_Human_Genetics/ULTRA-DD/FrontierImmunology/KidneyStone/outputs/crossdisease_suprahex.txt ~/Sites/XGR/KSD/BOOKLET
+
 
 ## Crosstalk.approved_phased.txt
 cp ~/Databases/grant_app/jobs/Oxford/Oxford_Wellcome_Trust_Centre_for_Human_Genetics/ULTRA-DD/FrontierImmunology/KidneyStone/Crosstalk.approved_phased.txt ~/Sites/XGR/KSD/BOOKLET
 
 ```
 
+# Genetic prioritisation
 
-# List of prioritised target genes
+```{r manhattan, fig.cap="Manhattan plot illustrates priority rating (y-axis) for prioritised target genes (color-coded by chromosomes; x-axis), with top 30 genes named.", fig.width=10, fig.height=3.6, echo=FALSE, eval=T, fig.align="center",out.width="90%"}
+library(png)
+library(grid)
+img <- readPNG("booklet.KSD.manhattan.png")
+grid.raster(img)
+```
 
-Summary statistics from nephrolithiasis genome wide association studies was used to prioritise >15,000 target genes. Target genes are ranked by 5-star rating (see the column `Rating`).
+## Package installation
+
+```{r, eval=F, echo=T}
+# if BiocManager not installed, please do so:
+install.packages('BiocManager')
+
+# then, install packages Pi and tidyverse
+BiocManager::install(c('Pi','tidyverse'))
+```
+
+## Do prioritisation
+
+```{r, eval=F, echo=T}
+# load packages
+library(Pi)
+library(tidyverse)
+
+# read GWAS summary data
+data <- read_delim('inputs/KSD_gwas_data.txt.gz', delim='\t') %>% as.data.frame()
+
+# pre-define parameters and built-in datasets
+RData.location <- "~/Sites/SVN/github/bigdata"
+guid <- 'gskpn'
+LD.customised <- xRDataLoader('GWAS_LD', guid=guid)$EUR %>% xSM2DF()
+significance.threshold <- 5e-8
+distance.max <- 2000
+decay.kernel <- "constant"
+GR.SNP <- xRDataLoader('dbSNP_GWAS', guid=guid)
+GR.Gene <- xRDataLoader('UCSC_knownGene', guid=guid)
+include.TAD <- "GM12878" # lymphoblast, reflective of immune-context genomic 
+include.HiC <- c("Monocytes","Macrophages_M0","Macrophages_M1","Macrophages_M2","Neutrophils","Megakaryocytes","Endothelial_precursors","Erythroblasts","Fetal_thymus","Naive_CD4_T_cells","Total_CD4_T_cells","Activated_total_CD4_T_cells","Nonactivated_total_CD4_T_cells","Naive_CD8_T_cells","Total_CD8_T_cells","Naive_B_cells","Total_B_cells")
+include.eQTL <- c("Blood","CD14","CD4","CD8")
+network.customised <- xDefineNet(network="STRING_high", STRING.only=c("experimental_score","database_score"),  RData.location=RData.location) %>% dNetInduce(nodes_query=names(GR.Gene), knn=0, largest.comp=F)
+
+# prepare predictors
+ls_pNode_genomic <- xPierSNPsAdvABF(data, LD.customised=LD.customised, significance.threshold=significance.threshold, distance.max=distance.max, decay.kernel=decay.kernel, decay.exponent=decay.exponent, GR.SNP=GR.SNP, GR.Gene=GR.Gene, include.TAD=include.TAD, include.HiC=include.HiC, include.eQTL=include.eQTL, network.customised=network.customised, RData.location=RData.location)
+
+# Prioritisation
+ls_pNode <- Filter(Negate(is.null), ls_pNode_genomic)
+dTarget <- xPierMatrix(ls_pNode, displayBy="pvalue", aggregateBy="fishers", RData.location=RData.location)
+
+# write into a file 'KSD_priority.txt.gz'
+dTarget$priority %>% select(name,rank,rating,description) %>% write_delim('outputs/KSD_priority.txt.gz', delim='\t')
+```
+
+## Prioritised genes
+
+Target genes stored in the output file `KSD_priority.txt.gz` above can be explored below. Notes, genes are ranked by priority rating (scored 0-5; see the column `Rating`).
 
 ```{r, echo=FALSE, eval=T}
 read_delim("KSD_priority.txt.gz", delim="\t") %>% transmute(Target=name, Rank=rank, Rating=signif(rating,digits=4), Description=description) %>% DT::datatable(options=list(pageLength=10,searchHighlight=T,dom='Bfrtip',buttons=c('csv','copy'), dom='t',scrollX=T), style='default', caption="", rownames=FALSE, escape=F, extensions=c('Buttons'))
 ```
 
 
-# List of prioritised pathways
+# Pathway crosstalk
 
-The top ranked targets (~150) were highly enriched for genes involved in TRAF6- or TNFR1-induced NF-kappa B activation, including BIRC2/3, IKBKB/G, NFKB1/2, NFKBIA/B, TRAF1/2/6, MYD88 and TNF. 
-
-```{r pathway, fig.cap="", fig.width=9, fig.height=3, echo=FALSE, eval=T, fig.align="center",out.width="100%"}
+```{r crosstalk, fig.cap="Gene-centric representation of the crosstalk, with nodes for genes and edges for interactions between nodes. Node are labelled by gene symbols along with the priority information (formatted as `[rating@rank]`) and color-coded by priority rating, and interactions derived from KEGG pathway map.", fig.width=6.4, fig.height=6, echo=FALSE, eval=T, fig.align="center",out.width="60%"}
 library(png)
 library(grid)
-img <- readPNG("booklet.KSD.pathway.png")
+img <- readPNG("booklet.KSD.crosstalk.png")
 grid.raster(img)
 ```
 
-Pathways and their gene members can be explored below.
+## Identify crosstalk
+
+```{r, eval=F, echo=T}
+# gene interaction information merged from KEGG pathways
+ls_ig <- lapply(c("KEGG_environmental","KEGG_organismal"), function(network){
+	g <- xDefineNet(network=network, guid=guid)
+})
+ig <- xCombineNet(ls_ig)
+
+# keep the largest component
+ig2 <- dNetInduce(g=ig, nodes_query=V(ig)$name) %>% as.undirected()
+
+# search for a subset (with a desired node number [30,35]) of the gene network 
+subg <- xPierSubnet(dTarget, network.customised=ig2, subnet.size=50)
+
+# write into a file 'subg_nodes.txt'
+dTarget$priority %>% select(name,rank,rating,description) %>% semi_join(tibble(name=V(subg)$name), by='name') %>% write_delim("outputs/subg_nodes.txt", delim='\t')
+```
+
+## Crosstalk genes
+
+Network genes identified above (`subg_nodes.txt`) can be explored:
 
 ```{r, echo=FALSE, eval=T}
-read_delim("KSD_reactome.txt", delim="\t") %>% top_n(10,or) %>% transmute(Pathway=name, log2OR=or, FDR=adjp, Genes=members_Overlap) %>% DT::datatable(options=list(pageLength=10,searchHighlight=T,dom='Bfrtip',buttons=c('csv','copy'), dom='t',scrollX=T), style='default', caption="", rownames=FALSE, escape=F, extensions=c('Buttons'))
+read_delim("subg_nodes.txt", delim="\t") %>% transmute(Target=name, Rank=rank, Rating=signif(rating,digits=4), Description=description) %>% DT::datatable(options=list(pageLength=10,searchHighlight=T,dom='Bfrtip',buttons=c('csv','copy'), dom='t',scrollX=T), style='default', caption="", rownames=FALSE, escape=F, extensions=c('Buttons'))
 ```
 
 
-# Gene network
+# Cross-disease comparisons
 
-A network of highly ranked and interconnecting genes was identified containing 30 genes and 62 interactions. Genes colored by 5-star rating (also labelled in the form of `[rating@rank]`), and interactions derived from KEGG pathway map.
-
-```{r subnetwork, fig.cap="", fig.width=6, fig.height=6, echo=FALSE, eval=T, fig.align="center",out.width="90%"}
+```{r suprahex, fig.cap="Comparisons using the supra-hexagonal map. This map was learned from the prioritisation information of 53 crosstalk genes in kidney stone disease (KSD) and 8 immune-related traits. Each map illustrates a trait-specific crosstalk gene prioritisation profile. Across traits, genes with similar prioritisation patterns are mapped onto the same or nearly position in the map. The outermost frame represents the landscape for the traits analysed, from which geometric locations of traits delineate their relationships (by the similarity of prioritisation profiles between traits). AS: Ankylosing Spondylitis; CRO: Crohn's Disease; MS: Multiple Sclerosis; PSO: Psoriasis; RA: Rheumatoid Arthritis; SLE: Systemic Lupus Erythematosus; T1D: Type I Diabetes; UC: Ulcerative Colitis.", fig.width=7.3, fig.height=6, echo=FALSE, eval=T, fig.align="center",out.width="50%"}
 library(png)
 library(grid)
-img <- readPNG("booklet.KSD.subnetwork.png")
+img <- readPNG("booklet.KSD.suprahex.png")
 grid.raster(img)
 ```
 
-Network genes shown above can be searched and downloaded below.
+## Do comparison
 
-```{r, echo=FALSE, eval=T}
-read_delim("KSD_subg_nodes.txt", delim="\t") %>% transmute(Target=name, Rank=rank, Rating=signif(rating,digits=4), Description=description) %>% DT::datatable(options=list(pageLength=10,searchHighlight=T,dom='Bfrtip',buttons=c('csv','copy'), dom='t',scrollX=T), style='default', caption="", rownames=FALSE, escape=F, extensions=c('Buttons'))
+```{r, eval=F, echo=T}
+# read cross-disease prioritisation matrix
+data <- read_delim('outputs/crossdisease_matrix.txt', delim='\t') %>% column_to_rownames('target')
+
+# analysed using the self-organising learning algorithm
+sMap <- data %>% sPipeline(scaling=1)
+
+# the resulting map partitioned into gene clusters
+sBase <- sMap %>% sDmatCluster()
+
+# write into a file 'crossdisease_suprahex.txt'
+sWriteData(sMap, data, sBase, keep.data=T) %>% transmute(Target=ID, Index=str_c('H',Hexagon_index), Cluster=str_c('C',Cluster_base), KSD,AS,PSO,UC,CRO,RA,MS,SLE,T1D) %>% write_delim('outputs/crossdisease_suprahex.txt', delim='\t')
 ```
 
-# Drug repurposing
+## Gene clusters
 
-According to the ChEMBL database, network genes are linked to targets of approved drugs and preclinical (phased) drugs. 
+Clustered genes identified above (`crossdisease_suprahex.txt`) can be explored:
 
 ```{r, echo=FALSE, eval=T}
-read_delim("Crosstalk.approved_phased.txt", delim="\t") %>% select(Target, Disease, Drug, Phase) %>% DT::datatable(options=list(pageLength=10,searchHighlight=T,dom='Bfrtip',buttons=c('csv','copy'), dom='t',scrollX=T), style='default', caption="", rownames=FALSE, escape=F, extensions=c('Buttons'))
+read_delim("crossdisease_suprahex.txt", delim="\t") %>% arrange(Cluster,Index,Target) %>% mutate_at(c('KSD','AS','PSO','UC','CRO','RA','MS','SLE','T1D'), 
+function(x) signif(x,digits=3)) %>% DT::datatable(options=list(pageLength=10,searchHighlight=T,dom='Bfrtip',buttons=c('csv','copy'), dom='t',scrollX=T), style='default', caption="", rownames=FALSE, escape=F, extensions=c('Buttons'))
 ```
