--- a/ksd.Rmd
+++ b/ksd.Rmd
@@ -45,11 +45,11 @@ Inflammatory response plays a key role in kidney stone formation, and targeting 
 
 ## Abstract
 
-- **Background**: Formation of kidney stones resulting in urological disorders remains a major cause of morbidity in renal diseases and many others. Innate immunity, mainly inflammasome, has demonstrated a key role in the development of [kidney stone disease](https://www.nhs.uk/conditions/Kidney-stones/) (or `nephrolithiasis`) but a molecular rationale for therapeutic intervention targeting immunity is far from clear. We reason that identifying inflammatory gene networks underlying risk of nephrolithiasis would inform therapeutic targets for rational drug selection. 
+- **Background**: Formation of kidney stones resulting in urological disorders remains a major cause of morbidity in renal diseases and many others. Innate immunity, mainly inflammasome, has demonstrated a key role in the development of [kidney stone disease](https://www.nhs.uk/conditions/Kidney-stones/) (or `nephrolithiasis`) but a molecular rationale for therapeutic intervention targeting immunity is far from clear. We reason that identifying inflammatory gene networks underlying disease risk would inform immunotherapeutic targets for candidate drug discovery. 
 
-- **Results**: Using our recently established genetics-led target prioritisation approach ([Pi](https://pubmed.ncbi.nlm.nih.gov/31253980)) applied to summary data from genome-wide association studies in nephrolithiasis (for example, [the most recent](https://pubmed.ncbi.nlm.nih.gov/31729369)), we generated a ranked list of ~12,500 target genes (see [Genetic prioritisation]), with the top ranked targets highly enriched for genes involved in the NF-kB regulation, including interaction neighbors of inflammasome genes. We identified a network of highly ranked and interconnecting genes that are of functional relevance to nephrolithiasis, such as those involved in autophagy (MTOR and SQSTM1). The identified network forms a cohesive crosstalk between inflammatory pathways (see [Pathway crosstalk]) that can be utilised for therapeutic repositioning. Coupled with removal analysis, these crosstalk genes can be also useful for combinatorial drug selection, including identification of ulixertinib (targeting MAPK3) and losmapimod (targeting MAPK14) that are both under clinical investigation as inhibitors of inflammatory mediators. Finally, we performed cross-disease comparisons and druggable pocket predictions, identifying inflammatory targets that are specific to and tractable for nephrolithiasis (see [Cross-disease comparisons]). 
+- **Results**: Using our recently established genetics-led target prioritisation approach ([Pi](https://pubmed.ncbi.nlm.nih.gov/31253980)) applied to summary data from genome-wide association studies in nephrolithiasis (for example, [the most recent](https://pubmed.ncbi.nlm.nih.gov/31729369)), we generated an atlas of genetic target prioritisation containing a ranked list of ~12,500 target genes (see [Genetic prioritisation]), with the top ranked targets highly enriched for genes involved in the NF-kB regulation, including interaction neighbors of inflammasome genes. We identified a network of highly ranked and interconnecting genes that are of functional relevance to nephrolithiasis, such as those involved in autophagy (MTOR and SQSTM1). The identified network forms a cohesive crosstalk between inflammatory pathways (see [Pathway crosstalk]) that can be utilised for therapeutic repositioning. Coupled with removal analysis, these crosstalk genes can be also useful for combinatorial drug selection, including identification of ulixertinib (targeting MAPK3) and losmapimod (targeting MAPK14) that are both under clinical investigation as inhibitors of inflammatory mediators. Finally, we performed cross-disease comparisons and druggable pocket predictions, identifying inflammatory targets that are specific to and tractable for nephrolithiasis (see [Cross-disease comparisons]). 
 
-- **Conclusion**: Taken together, genetic targets prioritised and candidate drugs repositioned in this study provide the rich information of how to target innate immune pathways, with the potential of advancing immunotherapeutic strategies for nephrolithiasis. The data supporting our findings are made publicly available at https://23verse.github.io/kids. Please email [us](mailto:fh12355@rjh.com.cn) for more information.
+- **Conclusion**: Genetic targets and candidate drugs, in silico identified in this study, provide the rich information of how to target innate immune pathways, with the potential of advancing immunotherapeutic strategies for nephrolithiasis. The data supporting our findings are made publicly available at https://23verse.github.io/kids. Please email [us](mailto:fh12355@rjh.com.cn) for more information.
 
 
 ```{r, eval=FALSE, echo=FALSE}
@@ -256,7 +256,7 @@ dTarget$priority %>% select(name,rank,rating,description) %>% semi_join(tibble(n
 
 ## Crosstalk genes
 
-Network genes identified above (`subg_nodes.txt`) can be explored:
+Crosstalk genes identified above (`subg_nodes.txt`) can be explored:
 
 ```{r, echo=FALSE, eval=T}
 read_delim("subg_nodes.txt", delim="\t") %>% transmute(Target=name, Rank=rank, Rating=signif(rating,digits=4), Description=description) %>% DT::datatable(options=list(pageLength=10,searchHighlight=T,dom='Bfrtip',buttons=c('csv','copy'), dom='t',scrollX=T), style='default', caption="", rownames=FALSE, escape=F, extensions=c('Buttons'))
